GenDoc GenDocEdit Updates

--- a/HTML/GenDocEditor/Class/ClassGroupDetail.html
+++ b/HTML/GenDocEditor/Class/ClassGroupDetail.html
@@ -46,7 +46,8 @@
       <h4>Class Group Button</h4>
       <p>
         The Class Group Button appears to the right of the Class Group Name. It
-        displays the Class Group List for selecting an existing group.
+        displays the <a href="ClassHeadingSelect.html">Class Heading Select List</a>
+        for selecting an existing group.
       </p>
       <h4>Heading</h4>
       <p>
