--- a/HTML/GenDocEditor/Method/MethodGroupDetail.html
+++ b/HTML/GenDocEditor/Method/MethodGroupDetail.html
@@ -46,7 +46,8 @@
       <h4>Class Group Button</h4>
       <p>
         The Method Group Button appears to the right of the Method Group Name. It
-        displays the Method Group List for selecting an existing group.
+        displays the <a href="MethodHeadingSelect.html">Method Heading Select List</a>
+        for selecting an existing group.
       </p>
       <h4>Heading</h4>
       <p>
