--- a/HTML/GenDocEditor/Method/MethodHeadingSelect.html
+++ b/HTML/GenDocEditor/Method/MethodHeadingSelect.html
@@ -1,80 +1,108 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
 <!-- MethodHeadingSelect.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
-  <title>Method Heading Select List</title>
+  <title>Method Heading Select</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Method Heading Select List</h3>
-  <p>
-    The Method Heading Items can be added, edited and deleted from this list.
-    A heading can be selected from this list to be assigned to a method group.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
+      / MethodHeadingSelect
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Method Heading Select List</div>
+    </div>
+    <div class='Text'>
+      <p>
+        The Method Heading Items can be added, edited and deleted from this list.
+        A heading can be selected from this list to be assigned to a method group.
+      </p>
+      <p>
+        <img src="MethodHeadingSelect.jpg" alt="Method Heading Select List" width="300" />
+      </p>
 
-  <h3>Context Menu</h3>
-  <p>
-    The Context Menu can be displayed by clicking the right mouse button on the
-    desired list item. The list item is selected and the menu items apply to the
-    selected item or list.
-  </p>
-  <p>
-    If you are using a Tablet or a laptop in Tablet Mode, touch the desired
-    list item and leave your finger on the item for a short while until a box
-    is displayed. This shows that the touch is considered a right mouse
-    click. Remove your finger and the context menu will be displayed.
-  </p>
-  <b>New</b>
-  <p>
-    The 'New' menu item displays the
-    <a href="MethodHeadingDetail.html">Method Heading Detail</a> dialog to allow
-    for the creation of a new list item.
-  </p>
-  <b>Edit</b>
-  <p>
-    The 'Edit' menu item displays the
-    <a href="MethodHeadingDetail.html">Method Heading Detail</a> dialog to allow
-    for editing the selected list item.
-  </p>
-  <b>Delete</b>
-  <p>
-    The 'Delete' menu item deletes the selected list item.
-  </p>
-  <b>Refresh</b>
-  <p>
-    The 'Refresh' menu item reloads the list items from the database.
-  </p>
-  <b>Export Text</b>
-  <p>
-    The 'Export Text' menu item creates a tab delimited text file with the file
-    name 'ExportFiles\MethodHeading.txt'. It attempts to display the data with
-    the application that is associated with the '.txt' extension.
-  </p>
-  <b>Export CSV</b>
-  <p>
-    The 'Export CSV' menu item creates a comma delimited text file with the file
-    name 'ExportFiles\MethodHeading.csv'. It attempts to display the data with the
-    application that is associated with the '.csv' extension.
-  </p>
-  <b>Reset Sequence</b>
-  <p>
-    The 'Reset Sequence' menu item resequences the items in the lists starting
-    with the number '1'.
-  </p>
-  <b>Exit</b>
-  <p>
-    The 'Exit' menu item closes the window and exits the application.
-  </p>
-  <b>Help</b>
-  <p>
-    Displays the context sensitive Help Page.
-  </p>
-  <h6>
-    MethodHeadingSelect<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on the
+        desired list item. The list item is selected and the menu items apply to the
+        selected item or list.
+      </p>
+      <p>
+        If you are using a Tablet or a laptop in Tablet Mode, touch the desired
+        list item and leave your finger on the item for a short while until a box
+        is displayed. This shows that the touch is considered a right mouse
+        click. Remove your finger and the context menu will be displayed.
+      </p>
+      <h4>New</h4>
+      <p>
+        The 'New' menu item displays the
+        <a href="MethodHeadingDetail.html">Method Heading Detail</a> dialog to allow
+        for the creation of a new list item.
+      </p>
+      <h4>Edit</h4>
+      <p>
+        The 'Edit' menu item displays the
+        <a href="MethodHeadingDetail.html">Method Heading Detail</a> dialog to allow
+        for editing the selected list item.
+      </p>
+      <h4>Delete</h4>
+      <p>
+        The 'Delete' menu item deletes the selected list item.
+      </p>
+      <h4>Refresh</h4>
+      <p>
+        The 'Refresh' menu item reloads the list items from the database.
+      </p>
+      <h4>Export Text</h4>
+      <p>
+        The 'Export Text' menu item creates a tab delimited text file with the file
+        name 'ExportFiles\MethodHeading.txt'. It attempts to display the data with
+        the application that is associated with the '.txt' extension.
+      </p>
+      <h4>Export CSV</h4>
+      <p>
+        The 'Export CSV' menu item creates a comma delimited text file with the file
+        name 'ExportFiles\MethodHeading.csv'. It attempts to display the data with the
+        application that is associated with the '.csv' extension.
+      </p>
+      <h4>Reset Sequence</h4>
+      <p>
+        The 'Reset Sequence' menu item resequences the items in the lists starting
+        with the number '1'.
+      </p>
+      <h4>Exit</h4>
+      <p>
+        The 'Exit' menu item closes the window and exits the application.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
+      / MethodHeadingSelect
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
