--- a/HTML/GenDocEditor/Class/ClassHeadingDetail.html
+++ b/HTML/GenDocEditor/Class/ClassHeadingDetail.html
@@ -1,44 +1,85 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- ClassHeadingDetail.html -->
+<!-- ClassHeadingDetail.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
   <title>Class Heading Detail</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Class Heading Detail Dialog</h3>
-  <p>
-    The Class Heading Detail dialog allows the user to create and edit
-    Class Group entries.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassHeadingSelect.html">ClassHeadingSelect</a>
+      / ClassHeadingDetail
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Class Heading Detail Dialog</div>
+    </div>
+    <p>
+      <img src="ClassHeadingDetail.jpg" alt="Class Heading Detail" width="300" />
+    </p>
+    <div class='Text'>
+      <p>
+        The Class Heading Detail dialog allows the user to create and edit
+        Class Group entries.
+      </p>
+      <img src="ClassHeadingDetail.jpg" alt="Class Heading Detail" width="300" />
 
-  <h3>Form Controls</h3>
-  <b>Name</b>
-  <p>
-    The unique item identifier.
-  </p>
-  <b>Heading</b>
-  <p>
-    The item heading text.
-  </p>
-  <b>Sequence</b>
-  <p>
-    The item sequence.
-  </p>
-  <b>OK Button</b>
-  <p>
-    Saves the entered data and exits the dialog.
-  </p>
-  <b>Cancel Button</b>
-  <p>
-    Exits the dialog without saving the entered data.
-  </p>
-  <h6>
-    ClassHeadingDetail<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Form Controls</div>
+      <h4>Name</h4>
+      <p>
+        The unique item identifier.
+      </p>
+      <h4>Heading</h4>
+      <p>
+        The item heading text.
+      </p>
+      <h4>Sequence</h4>
+      <p>
+        The item sequence.
+      </p>
+      <h4>OK Button</h4>
+      <p>
+        Saves the entered data and exits the dialog.
+      </p>
+      <h4>Cancel Button</h4>
+      <p>
+        Exits the dialog without saving the entered data.
+      </p>
+
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on a
+        place in the dialog that does not contain a control item.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassHeadingSelect.html">ClassHeadingSelect</a>
+      / ClassHeadingDetail
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
