GenDoc GenDocEdit Updates

--- a/HTML/GenDocEditor/Class/ClassHeadingDetail.html
+++ b/HTML/GenDocEditor/Class/ClassHeadingDetail.html
@@ -16,6 +16,8 @@
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
       / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassGroupList.html">ClassGroupList</a>
+      / <a href="ClassGroupDetail.html">ClassGroupDetail</a>
       / <a href="ClassHeadingSelect.html">ClassHeadingSelect</a>
       / ClassHeadingDetail
     </div>
@@ -71,6 +73,8 @@
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
       / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassGroupList.html">ClassGroupList</a>
+      / <a href="ClassGroupDetail.html">ClassGroupDetail</a>
       / <a href="ClassHeadingSelect.html">ClassHeadingSelect</a>
       / ClassHeadingDetail
     </div>
