--- a/HTML/GenDocEditor/Method/MethodHeadingDetail.html
+++ b/HTML/GenDocEditor/Method/MethodHeadingDetail.html
@@ -15,7 +15,9 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
-      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
+      / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
       / <a href="MethodHeadingSelect.html">MethodHeadingSelect</a>
       / MethodHeadingDetail
     </div>
@@ -70,7 +72,9 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
-      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
+      / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
       / <a href="MethodHeadingSelect.html">MethodHeadingSelect</a>
       / MethodHeadingDetail
     </div>
