--- a/HTML/GenDocEditor/Method/MethodHeadingSelect.html
+++ b/HTML/GenDocEditor/Method/MethodHeadingSelect.html
@@ -15,6 +15,8 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
       / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
       / MethodHeadingSelect
     </div>
@@ -94,6 +96,8 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
       / <a href="MethodGroupDetail.html">MethodGroupDetail</a>
       / MethodHeadingSelect
     </div>
