--- a/HTML/GenDocEditor/Class/ClassHeadingSelect.html
+++ b/HTML/GenDocEditor/Class/ClassHeadingSelect.html
@@ -15,6 +15,8 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassGroupList.html">ClassGroupList</a>
       / <a href="ClassGroupDetail.html">ClassGroupDetail</a>
       / ClassHeadingSelect
     </div>
@@ -94,6 +96,8 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassGroupList.html">ClassGroupList</a>
       / <a href="ClassGroupDetail.html">ClassGroupDetail</a>
       / ClassHeadingSelect
     </div>
