GenDoc GenDocEdit Updates

--- a/HTML/GenDocEditor/Class/ClassItemDetail.html
+++ b/HTML/GenDocEditor/Class/ClassItemDetail.html
@@ -43,6 +43,12 @@
       <p>
         The Class name.
       </p>
+      <h4>Class Button</h4>
+      <p>
+        The Class Button appears to the right of the Class Name. It displays
+        the <a href="ClassSelect.html">Class Select List</a>
+        for selecting an existing class.
+      </p>
       <h4>Description</h4>
       <p>
         The item description text.
