--- a/HTML/GenDocEditor/Method/MethodItemDetail.html
+++ b/HTML/GenDocEditor/Method/MethodItemDetail.html
@@ -43,6 +43,12 @@
       <p>
         The Method name.
       </p>
+      <h4>Method Button</h4>
+      <p>
+        The Method Button appears to the right of the Method Name. It displays
+        the <a href="MethodSelect.html">Method Select List</a>
+        for selecting an existing method.
+      </p>
       <h4>Description</h4>
       <p>
         The item description text.
