--- a/HTML/GenDocEditor/Method/MethodSelect.html
+++ b/HTML/GenDocEditor/Method/MethodSelect.html
@@ -6,55 +6,85 @@
 <head>
   <meta charset="utf-8" />
   <title>Method Select List</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Method Select List</h3>
-  <p>
-    The Method names are retrieved from the code documentation file for the
-    associated class. A Method name can be selected from this list to be
-    assigned to a Method item.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodItemList.html">MethodItemList</a>
+      / <a href="MethodItemDetail.html">MethodItemDetail</a>
+      / MethodList
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Method Select List</div>
+    </div>
+    <div class='Text'>
+      <p>
+        The Method names are retrieved from the code documentation file for the
+        associated class. A Method name can be selected from this list to be
+        assigned to a Method item.
+      </p>
+      <img src="MethodSelect.jpg" alt="Method Select List" width="300" />
 
-  <h3>Context Menu</h3>
-  <p>
-    The Context Menu can be displayed by clicking the right mouse button on the
-    desired list item. The list item is selected and the menu items apply to the
-    selected item or list.
-  </p>
-  <p>
-    If you are using a Tablet or a laptop in Tablet Mode, touch the desired
-    list item and leave your finger on the item for a short while until a box
-    is displayed. This shows that the touch is considered a right mouse
-    click. Remove your finger and the context menu will be displayed.
-  </p>
-  <b>Select</b>
-  <p>
-    Returns the selected item to the parent form.
-  </p>
-  <b>Export Text</b>
-  <p>
-    The 'Export Text' menu item creates a tab delimited text file with the file
-    name 'ExportFiles\MethodName.txt'. It attempts to display the data with
-    the application that is associated with the '.txt' extension.
-  </p>
-  <b>Export CSV</b>
-  <p>
-    The 'Export CSV' menu item creates a comma delimited text file with the file
-    name 'ExportFiles\MethodName.csv'. It attempts to display the data with the
-    application that is associated with the '.csv' extension.
-  </p>
-  <b>Exit</b>
-  <p>
-    The 'Exit' menu item closes the window and exits the application.
-  </p>
-  <b>Help</b>
-  <p>
-    Displays the context sensitive Help Page.
-  </p>
-  <h6>
-    MethodSelect<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on the
+        desired list item. The list item is selected and the menu items apply to the
+        selected item or list.
+      </p>
+      <p>
+        If you are using a Tablet or a laptop in Tablet Mode, touch the desired
+        list item and leave your finger on the item for a short while until a box
+        is displayed. This shows that the touch is considered a right mouse
+        click. Remove your finger and the context menu will be displayed.
+      </p>
+      <h4>Select</h4>
+      <p>
+        Returns the selected item to the parent form.
+      </p>
+      <h4>Export Text</h4>
+      <p>
+        The 'Export Text' menu item creates a tab delimited text file with the file
+        name 'ExportFiles\MethodName.txt'. It attempts to display the data with
+        the application that is associated with the '.txt' extension.
+      </p>
+      <h4>Export CSV</h4>
+      <p>
+        The 'Export CSV' menu item creates a comma delimited text file with the file
+        name 'ExportFiles\MethodName.csv'. It attempts to display the data with the
+        application that is associated with the '.csv' extension.
+      </p>
+      <h4>Exit</h4>
+      <p>
+        The 'Exit' menu item closes the window and exits the application.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodItemList.html">MethodItemList</a>
+      / <a href="MethodItemDetail.html">MethodItemDetail</a>
+      / MethodList
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
