--- a/HTML/GenDocEditor/Class/ClassSelect.html
+++ b/HTML/GenDocEditor/Class/ClassSelect.html
@@ -6,55 +6,85 @@
 <head>
   <meta charset="utf-8" />
   <title>Class Select List</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Class Select List</h3>
-  <p>
-    The Class names are retrieved from the code documentation file for the
-    associated assembly. A class name can be selected from this list to be
-    assigned to a Class item.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassItemList.html">ClassItemList</a>
+      / <a href="ClassItemDetail.html">ClassItemDetail</a>
+      / ClassItemList
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Class Select List</div>
+    </div>
+    <div class='Text'>
+      <p>
+        The Class names are retrieved from the code documentation file for the
+        associated assembly. A class name can be selected from this list to be
+        assigned to a Class item.
+      </p>
+      <img src="ClassSelect.jpg" alt="Class Select List" width="300" />
 
-  <h3>Context Menu</h3>
-  <p>
-    The Context Menu can be displayed by clicking the right mouse button on the
-    desired list item. The list item is selected and the menu items apply to the
-    selected item or list.
-  </p>
-  <p>
-    If you are using a Tablet or a laptop in Tablet Mode, touch the desired
-    list item and leave your finger on the item for a short while until a box
-    is displayed. This shows that the touch is considered a right mouse
-    click. Remove your finger and the context menu will be displayed.
-  </p>
-  <b>Select</b>
-  <p>
-    Returns the selected item to the parent form.
-  </p>
-  <b>Export Text</b>
-  <p>
-    The 'Export Text' menu item creates a tab delimited text file with the file
-    name 'ExportFiles\ClassName.txt'. It attempts to display the data with
-    the application that is associated with the '.txt' extension.
-  </p>
-  <b>Export CSV</b>
-  <p>
-    The 'Export CSV' menu item creates a comma delimited text file with the file
-    name 'ExportFiles\ClassName.csv'. It attempts to display the data with the
-    application that is associated with the '.csv' extension.
-  </p>
-  <b>Close</b>
-  <p>
-    The 'Clsoe' menu item closes the window.
-  </p>
-  <b>Help</b>
-  <p>
-    Displays the context sensitive Help Page.
-  </p>
-  <h6>
-    ClassSelect<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on the
+        desired list item. The list item is selected and the menu items apply to the
+        selected item or list.
+      </p>
+      <p>
+        If you are using a Tablet or a laptop in Tablet Mode, touch the desired
+        list item and leave your finger on the item for a short while until a box
+        is displayed. This shows that the touch is considered a right mouse
+        click. Remove your finger and the context menu will be displayed.
+      </p>
+      <h4>Select</h4>
+      <p>
+        Returns the selected item to the parent form.
+      </p>
+      <h4>Export Text</h4>
+      <p>
+        The 'Export Text' menu item creates a tab delimited text file with the file
+        name 'ExportFiles\ClassName.txt'. It attempts to display the data with
+        the application that is associated with the '.txt' extension.
+      </p>
+      <h4>Export CSV</h4>
+      <p>
+        The 'Export CSV' menu item creates a comma delimited text file with the file
+        name 'ExportFiles\ClassName.csv'. It attempts to display the data with the
+        application that is associated with the '.csv' extension.
+      </p>
+      <h4>Close</h4>
+      <p>
+        The 'Close' menu item closes the window.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="ClassTab.html">ClassTab</a>
+      / <a href="ClassItemList.html">ClassItemList</a>
+      / <a href="ClassItemDetail.html">ClassItemDetail</a>
+      / ClassItemList
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
