--- a/HTML/GenDocEditor/Assembly/AssemblyTab.html
+++ b/HTML/GenDocEditor/Assembly/AssemblyTab.html
@@ -26,6 +26,8 @@
         The GenDoc Editor contains the Assembly Tab which has the Assembly Group
         and Assembly Item lists.
       </p>
+      <img src="AssemblyTab.jpg" alt="Assembly Tab" width="300" />
+
       <p>
         The <a href="AssemblyGroupList.html">Assembly Group</a> list contains the
         defined groups for display on the Main HTML documentation page.
