--- a/HTML/GenDocEditor/Class/ClassTab.html
+++ b/HTML/GenDocEditor/Class/ClassTab.html
@@ -26,6 +26,8 @@
         The GenDoc Editor contains the Class Tab which has the Class Group
         and Class Item lists.
       </p>
+      <img src="ClassTab.jpg" alt="Class Tab" width="300" />
+
       <p>
         The <a href="ClassGroupList.html">Class Group</a> list contains the
         defined groups for display on the Assembly HTML documentation page.
