--- a/HTML/GenDocEditor/Method/MethodTab.html
+++ b/HTML/GenDocEditor/Method/MethodTab.html
@@ -26,6 +26,8 @@
         The GenDoc Editor contains the Method Tab which has the Method Group
         and Method Item lists.
       </p>
+      <img src="MethodTab.jpg" alt="Method Tab" width="300" />
+
       <p>
         The <a href="MethodGroupList.html">Method Group</a> list contains the
         defined groups for display on the Class HTML documentation page.
