--- a/HTML/GenDocEditor/GenDocEdit.html
+++ b/HTML/GenDocEditor/GenDocEdit.html
@@ -26,6 +26,7 @@
         Method Group data. This data is used to group items together on the Main,
         Assembly and Class HTML Documentation pages.
       </p>
+      <img src="Assembly\AssemblyTab.jpg" alt="Assembly Tab" width="300" />
 
       <!-- ********** -->
       <h4>The Feature Tabs</h4>
