--- a/HTML/GenDocEditor/Method/MethodItemDetail.html
+++ b/HTML/GenDocEditor/Method/MethodItemDetail.html
@@ -53,6 +53,10 @@
       <p>
         The item description text.
       </p>
+      <h4>Overload Name</h4>
+      <p>
+        The Method overload name.
+      </p>
       <h4>Sequence</h4>
       <p>
         The item sequence.
