--- a/HTML/GenDocEditor/Class/ClassHeadingSelect.html
+++ b/HTML/GenDocEditor/Class/ClassHeadingSelect.html
@@ -65,6 +65,15 @@
       <p>
         The 'Refresh' menu item reloads the list items from the database.
       </p>
+      <h4>Reset Sequence</h4>
+      <p>
+        The 'Reset Sequence' menu item resequences the items in the lists starting
+        with the number '1'.
+      </p>
+      <h4>Select</h4>
+      <p>
+        Returns the selected item to the parent form.
+      </p>
       <h4>Export Text</h4>
       <p>
         The 'Export Text' menu item creates a tab delimited text file with the file
@@ -77,14 +86,9 @@
         name 'ExportFiles\ClassHeading.csv'. It attempts to display the data with the
         application that is associated with the '.csv' extension.
       </p>
-      <h4>Reset Sequence</h4>
+      <h4>Close</h4>
       <p>
-        The 'Reset Sequence' menu item resequences the items in the lists starting
-        with the number '1'.
-      </p>
-      <h4>Exit</h4>
-      <p>
-        The 'Exit' menu item closes the window and exits the application.
+        The 'Close' menu item closes the window.
       </p>
       <h4>Help</h4>
       <p>
