--- a/HTML/GenDocEditor/Method/MethodSelect.html
+++ b/HTML/GenDocEditor/Method/MethodSelect.html
@@ -60,9 +60,9 @@
         name 'ExportFiles\MethodName.csv'. It attempts to display the data with the
         application that is associated with the '.csv' extension.
       </p>
-      <h4>Exit</h4>
+      <h4>Close</h4>
       <p>
-        The 'Exit' menu item closes the window and exits the application.
+        The 'Close' menu item closes the window.
       </p>
       <h4>Help</h4>
       <p>
