--- a/HTML/GenDocEditor/Method/MethodGroupDetail.html
+++ b/HTML/GenDocEditor/Method/MethodGroupDetail.html
@@ -80,6 +80,29 @@
         The Context Menu can be displayed by clicking the right mouse button on a
         place in the dialog that does not contain a control item.
       </p>
+      <h4>Save and New</h4>
+      <p>
+        Saves the current item and clears the detail dialog ready for a
+        new item.
+      </p>
+      <h4>Save and Previous</h4>
+      <p>
+        Saves the current item and loads the detail dialog with the
+        data for the previous item in the parent list ready for editing.
+      </p>
+      <p>
+        The dialog is dismissed if the current item was the first item
+        in the list.
+      </p>
+      <h4>Save and Next</h4>
+      <p>
+        Saves the current item and loads the detail dialog with the
+        data for the next item in the parent list ready for editing.
+      </p>
+      <p>
+        The dialog is dismissed if the current item was the last item
+        in the list.
+      </p>
       <h4>Help</h4>
       <p>
         Displays the context sensitive Help Page.
