--- a/HTML/GenDocEditor/Assembly/AssemblyItemDetail.html
+++ b/HTML/GenDocEditor/Assembly/AssemblyItemDetail.html
@@ -94,7 +94,7 @@
         data for the previous item in the parent list ready for editing.
       </p>
       <p>
-        The dialog is dismissed if the current item was the first item
+        The dialog is closed if the current item was the first item
         in the list.
       </p>
       <h4>Save and Next</h4>
@@ -103,7 +103,7 @@
         data for the next item in the parent list ready for editing.
       </p>
       <p>
-        The dialog is dismissed if the current item was the last item
+        The dialog is closed if the current item was the last item
         in the list.
       </p>
       <h4>Help</h4>
