--- a/HTML/GenDocEditor/Assembly/AssemblyGroupDetail.html
+++ b/HTML/GenDocEditor/Assembly/AssemblyGroupDetail.html
@@ -72,7 +72,7 @@
         data for the previous item in the parent list ready for editing.
       </p>
       <p>
-        The dialog is dismissed if the current item was the first item
+        The dialog is closed if the current item was the first item
         in the list.
       </p>
       <h4>Save and Next</h4>
@@ -81,7 +81,7 @@
         data for the next item in the parent list ready for editing.
       </p>
       <p>
-        The dialog is dismissed if the current item was the last item
+        The dialog is closed if the current item was the last item
         in the list.
       </p>
       <h4>Help</h4>
