--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Class/ClassGroupDetail.html
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Class/ClassGroupDetail.html
@@ -27,7 +27,7 @@
   <b>Class Group Button</b>
   <p>
     The Class Group Button appears to the right of the Class Group Name. It
-    displays the Class Group List for selecting an existing group.
+    displays the Class Heading Select List for selecting an existing group.
   </p>
   <b>Heading</b>
   <p>
@@ -56,6 +56,39 @@
   <b>Cancel Button</b>
   <p>
     Exits the dialog without saving the entered data.
+  </p>
+
+  <h3>Context Menu</h3>
+  <p>
+    The Context Menu can be displayed by clicking the right mouse button on a
+    place in the dialog that does not contain a control item.
+  </p>
+  <b>Save and New</b>
+  <p>
+    Saves the current item and clears the detail dialog ready for a
+    new item.
+  </p>
+  <b>Save and Previous</b>
+  <p>
+    Saves the current item and loads the detail dialog with the
+    data for the previous item in the parent list ready for editing.
+  </p>
+  <p>
+    The dialog is closed if the current item was the first item
+    in the list.
+  </p>
+  <b>Save and Next</b>
+  <p>
+    Saves the current item and loads the detail dialog with the
+    data for the next item in the parent list ready for editing.
+  </p>
+  <p>
+    The dialog is closed if the current item was the last item
+    in the list.
+  </p>
+  <b>Help</b>
+  <p>
+    Displays the context sensitive Help Page.
   </p>
   <h6>
     ClassGroupDetail<br />
