--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Class/ClassHeadingDetail.html
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Class/ClassHeadingDetail.html
@@ -35,6 +35,39 @@
   <p>
     Exits the dialog without saving the entered data.
   </p>
+
+  <h3>Context Menu</h3>
+  <p>
+    The Context Menu can be displayed by clicking the right mouse button on a
+    place in the dialog that does not contain a control item.
+  </p>
+  <b>Save and New</b>
+  <p>
+    Saves the current item and clears the detail dialog ready for a
+    new item.
+  </p>
+  <b>Save and Previous</b>
+  <p>
+    Saves the current item and loads the detail dialog with the
+    data for the previous item in the parent list ready for editing.
+  </p>
+  <p>
+    The dialog is closed if the current item was the first item
+    in the list.
+  </p>
+  <b>Save and Next</b>
+  <p>
+    Saves the current item and loads the detail dialog with the
+    data for the next item in the parent list ready for editing.
+  </p>
+  <p>
+    The dialog is closed if the current item was the last item
+    in the list.
+  </p>
+  <b>Help</b>
+  <p>
+    Displays the context sensitive Help Page.
+  </p>
   <h6>
     ClassHeadingDetail<br />
     Copyright (c) Lester J Clark and Contributors.<br />
