--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Method/MethodHeadingSelect.html
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Help/Method/MethodHeadingSelect.html
@@ -46,6 +46,11 @@
   <p>
     The 'Refresh' menu item reloads the list items from the database.
   </p>
+  <b>Reset Sequence</b>
+  <p>
+    The 'Reset Sequence' menu item resequences the items in the lists starting
+    with the number '1'.
+  </p>
   <b>Export Text</b>
   <p>
     The 'Export Text' menu item creates a tab delimited text file with the file
@@ -58,14 +63,9 @@
     name 'ExportFiles\MethodHeading.csv'. It attempts to display the data with the
     application that is associated with the '.csv' extension.
   </p>
-  <b>Reset Sequence</b>
+  <b>Close</b>
   <p>
-    The 'Reset Sequence' menu item resequences the items in the lists starting
-    with the number '1'.
-  </p>
-  <b>Exit</b>
-  <p>
-    The 'Exit' menu item closes the window and exits the application.
+    The 'Close' menu item closes the window.
   </p>
   <b>Help</b>
   <p>
