--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -24,6 +24,7 @@
       <div id='Title'>LJC Code Examples</div>
     </div>
     <div class='Text'>
+      <!-- ****************************** -->
       <h4 id="General">General Topics</h4>
       <p>
         How to use the
@@ -32,7 +33,7 @@
       <p>
         How to add <a href="General/AddCustomControls.html">LJC Custom Controls</a> to the ToolBox.
       </p>
-
+      <!-- ****************************** -->
       <h4 id="DataAccess">DataAccess</h4>
       <p>
         How to Configure DataAccess connection string using
@@ -53,7 +54,7 @@
         How to get a <a href="DataAccess/GetRowDataObject.html">Data Object</a>
         from an LJCGridRow.
       </p>
-
+      <!-- ****************************** -->
       <h4 id="SQLManager">SQLManager</h4>
       <p>
         The Example <a href="SQLManager/DataObject.html">Data Object</a>.
@@ -83,7 +84,7 @@
         How to update data using
         <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
       </p>
-
+      <!-- ****************************** -->
       <h4 id="ProvinceManager">ProvinceSQLManager</h4>
       <p>
         The <a href="ProvinceManager/SmartDataObject.html">Smart Data Object</a>.
@@ -103,7 +104,12 @@
       <p>
         How to <a href="ProvinceManager/UpdateProvince.html">Update</a> a Province record.
       </p>
-
+      <!-- ****************************** -->
+      <h4 id="Testing">Testing Tutorials</h4>
+      <p>
+        <a href="HTMLDocs/DataAccess/DAL.html">Data Access Layer</a>
+      </p>
+      <!-- ****************************** -->
       <h4 id="ProvinceManager">Utilities</h4>
       <p>
         <a href="GenTextEditor/GenTextEditor.html">GenText Editor</a>
