--- a/HTML/HTMLDocs/DataAccess/DAL.html
+++ b/HTML/HTMLDocs/DataAccess/DAL.html
@@ -30,17 +30,17 @@
     </p>
     <ul class="smallVMargin">
       <li>
-        Create a new Solution named “DataTest”
+        Create a new Solution named &quot;DataTest&quot;
       </li>
       <li>
-        Add a new .NET Framework Library Project named “DataTestDAL” to the
+        Add a new .NET Framework Library Project named &quot;DataTestDAL&quot; to the
         DataTest solution.
       </li>
       <li>
-        Add a Folder named “Data” to the DataTestDAL project.
+        Add a Folder named &quot;Data&quot; to the DataTestDAL project.
       </li>
       <li>
-        Add a Folder named “Manager” to the DataTestDAL project.
+        Add a Folder named &quot;Manager&quot; to the DataTestDAL project.
       </li>
     </ul>
     <p class="book">
@@ -68,8 +68,8 @@ GO</pre>
     <p class="book">
       A Data Object contains public properties for each data value in a data
       row. It is a strongly typed, object oriented representation of the data
-      row for use in code. A data row is sometimes referred to as a “record”. A
-      data value is sometimes referred to as a “column”.
+      row for use in code. A data row is sometimes referred to as a &quot;record&quot;. A
+      data value is sometimes referred to as a &quot;column&quot;.
     </p>
     <p class="book">
       A Data Object usually has the same name as the base table that contains
@@ -78,11 +78,11 @@ GO</pre>
     </p>
     <ul class="smallVMargin">
       <li>
-        Add a Class named “Person” to the Data folder.
+        Add a Class named &quot;Person&quot; to the Data folder.
       </li>
       <li>
         If Visual Studio creates the namespace as DataTestDAL.Data, then remove
-        the “.Data” suffix.
+        the &quot;.Data&quot; suffix.
       </li>
     </ul>
   </div>
@@ -157,11 +157,11 @@ GO</pre>
     </p>
     <ul class="smallVMargin">
       <li>
-        Add a Class named “Persons” to the Data folder.
+        Add a Class named &quot;Persons&quot; to the Data folder.
       </li>
       <li>
         If Visual Studio creates the namespace as DataTestDAL.Data, then remove
-        the “.Data” suffix.
+        the &quot;.Data&quot; suffix.
       </li>
     </ul>
   </div>
@@ -186,15 +186,15 @@ GO</pre>
     </p>
     <p class="book">
       A Data Manager usually has the same name as the base table followed with
-      the text “Manager”.
+      the text &quot;Manager&quot;.
     </p>
     <ul class="smallVMargin">
       <li>
-        Add a Class named “PersonManager” to the Manager folder.
+        Add a Class named &quot;PersonManager&quot; to the Manager folder.
       </li>
       <li>
         If Visual Studio creates the namespace as DataTestDAL.Manager, then
-        remove the “.Manager” suffix.
+        remove the &quot;.Manager&quot; suffix.
       </li>
     </ul>
   </div>
